--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.14.0",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
-  }
+  },
+  "type": "module"
 }
